assets/css/main.css
/* div.main {
  font-family: Arial;
}

h1 {
  text-align: center;
  font-family: Arial;
  color: black;
  font-weight: bold;
}

p {
  text-align: center;
}

h2 {
  font-family: Arial;
  color: black;
  font-weight: bold;
} */
/* 
.title .image1 {
  position: relative;
  top: 0;
  left: 0;
}

.image2 {
  position: absolute;
  top: 10px;
  left: 490px;
}

.image3 {
  position: absolute;
  top: 440px;
  left: 1230px;
}
.heading1 {
  position: absolute;
  top: 250px;
  left: 520px;
  font-size: 35px;
  font-family: sans-serif;
  color: white;
  font-style: bold;
  font-weight: 800;
}
*/

body {
  margin: 0;
}
.title {
  position: relative;
  height: 70vh;
}
.container {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
  display: flex;
  justify-content: center;
}
.parent {
  width: 50%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
}

.top_row {
  display: flex;
  width: 100%;
  justify-content: space-between;
}

.heading1 {
  color: white;
  font-size: 36px;
  font-family: sans-serif;
  font-weight: bold;
}

.image3 {
  align-self: flex-end;
}

.box-shadow-menu {
  position: relative;
  padding-left: 1.25em;
}
.box-shadow-menu:before {
  content: "";
  position: absolute;
  left: 0;
  top: 0.25em;
  width: 1em;
  height: 0.15em;
  background: black;
  box-shadow: 0 0.25em 0 0 black, 0 0.5em 0 0 black;
}

.Wines {
  background-color: lightslategray;
}
.Wines h1 {
  text-align: center;
  font-family: Arial;
  color: black;
  font-weight: bold;
  font-size: 30px;
}
.Wines p {
  text-align: center;
  font-family: sans-serif;
  color: rgb(66, 66, 66);
  font-weight: 100;
  font-size: 20px;
}
.pure_parent {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.pure {
  background-color: lightgray;
  border: solid;
}
.pure h1 {
  /* background-color: lightgray; */
  text-align: left;
  font-family: Arial;
  color: black;
  font-weight: bold;
  font-size: 30px;
  padding-left: 400px;
}

.pure p {
  /* background-color: lightgray; */
  text-align: left;
  font-family: sans-serif;
  color: rgb(66, 66, 66);
  font-weight: 100;
  font-size: 20px;
  padding-left: 400px;
}

.pure-img {
  background: white;
  border: solid;
}

.our_wines {
  background-color: pink;
}
.our_wines h1 {
  text-align: center;
  font-family: Arial;
  color: black;
  font-weight: bold;
  font-size: 30px;
  padding-right: 400px;
}

.our_wines_parent {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  background: lightcoral;
}
.our_wines_parent h1 {
  text-align: center;
  font-family: Arial;
  color: black;
  font-weight: bold;
}
.our_wines_parent p {
  text-align: left;
  font-family: sans-serif;
  color: rgb(66, 66, 66);
  font-weight: 100;
  font-size: 20px;
}

.our_wines_child2 {
  display: grid;
  background-color: lime;
}

.our_wines_child2 h1 {
  text-align: center;
  font-family: Arial;
  color: black;
  font-weight: bold;
  font-size: 30px;
}
.our_wines_child2 p {
  text-align: center;
}
.our_wines_child3 {
  display: grid;
  background-color: lime;
}
.our_wines_child3 h1 {
  text-align: center;
  font-family: Arial;
  color: black;
  font-weight: bold;
  font-size: 30px;
}
.our_wines_child3 p {
  text-align: right;
}
.quality_parent {
  display: grid;
  grid-template-columns: 1fr 1fr;
}
.quality h1 {
  text-align: right;
  font-family: Arial;
  color: black;
  font-weight: bold;
  font-size: 30px;
  padding-right: 400px;
}
.quality_child p {
  text-align: right;
  font-family: sans-serif;
  color: rgb(66, 66, 66);
  font-weight: 100;
  font-size: 20px;
  padding-right: 400px;
}
.quality-img {
  border: solid;
}
.cool_climate_parent {
  background: palevioletred;
  display: grid;
  grid-template-columns: 1fr 1fr;
}
.cool_climate h1 {
  text-align: left;
  font-family: Arial;
  color: black;
  font-weight: bold;
  font-size: 30px;
  padding-left: 400px;
}
.cool_climate p {
  text-align: left;
  font-family: sans-serif;
  color: rgb(66, 66, 66);
  font-weight: 100;
  font-size: 20px;
  padding-left: 400px;
}
.scroll_images {
  padding-left: 300px;
  border: solid;
}

.latest_release_parent {
  display: grid;
  grid-template-columns: 1fr 1fr;
}
.latest_release h1 {
  text-align: right;
  font-family: Arial;
  color: black;
  font-weight: bold;
  font-size: 30px;
  padding-right: 400px;
}
.latest_release_child p {
  text-align: right;
  font-family: sans-serif;
  color: rgb(66, 66, 66);
  font-weight: 100;
  font-size: 20px;
  padding-right: 400px;
}
.scroll_images_latest {
  padding-left: 300px;
  border: solid;
}

.footer {
  height: 30vh;
  width: 100%;
  background-color: black;
  text-align: left;
  font-family: sans-serif;
  color: white;
  font-weight: bold;
  font-size: 10px;
  top: 50px;
}

.scroll_images1 {
  padding-right: 300px;
  border: solid;
}

.multi_images_parent {
  grid-template-columns: 1fr 1fr;

  background: peru;
}
.grid1 {
  display: grid;
}
.grid2 {
  display: grid;
}
.grid3 {
  display: grid;
}
.grid4 {
  display: grid;
}
.grid5 {
  display: grid;
}
.grid6 {
  display: grid;
}

.top-row {
  display: flex;
  width: 100%;
  justify-content: left;
}

.parent1 {
  padding-left: 350px;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: left;
  align-items: left;
  color: white;
}
.links {
  padding-left: 350px;
  display: flex;
  flex-direction: row;
  justify-content: left;
  align-items: left;
  justify-content: space-between 20px;
}
.links a {
  color: white;
}
/* .lower_row{
  display:flex;
  width:100%;
  justify-content: left;

} */

.copyright {
  padding-left: 350px;
  display: flex;
  flex-direction: column;
  justify-content: left;
  align-items: left;
}
/* .footer{
  background-color: black;
  text-align: left;
  font-family: sans-serif;
  color: white;
  font-weight: bold;
} */

